--- a/index.html
+++ b/index.html
@@ -1,12 +1,110 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- ================= BASIC META ================= -->
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + Tailwind</title>
+
+    <title>
+      secured-storage-web | Encrypted LocalStorage, SessionStorage, Cookies &
+      IndexedDB
+    </title>
+
+    <meta
+      name="description"
+      content="secured-storage-web is a secure JavaScript storage library for localStorage, sessionStorage, cookies, and IndexedDB with AES encryption, compression, expiry, hashing, HMAC, and event tracking."
+    />
+
+    <meta
+      name="keywords"
+      content="secure storage javascript, encrypted localStorage, encrypted sessionStorage, secure cookies, encrypted indexedDB, AES encryption js, client-side encryption, web security library, secured-storage-web"
+    />
+
+    <meta name="author" content="Abhishek Verma" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- ================= CANONICAL ================= -->
+    <link
+      rel="canonical"
+      href="https://www.npmjs.com/package/secured-storage-web"
+    />
+
+    <!-- ================= OPEN GRAPH (SOCIAL SHARE) ================= -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="secured-storage-web | Secure Encrypted Web Storage"
+    />
+    <meta
+      property="og:description"
+      content="A powerful JavaScript package for secure encrypted storage across localStorage, sessionStorage, cookies, and IndexedDB. Supports AES, compression, expiry, hashing, and events."
+    />
+    <meta
+      property="og:url"
+      content="https://www.npmjs.com/package/secured-storage-web"
+    />
+    <meta property="og:site_name" content="secured-storage-web" />
+
+    <!-- Optional: add image later if you create one -->
+    <!-- <meta property="og:image" content="https://your-domain.com/og-image.png" /> -->
+
+    <!-- ================= TWITTER CARD ================= -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="secured-storage-web | Secure Encrypted Web Storage"
+    />
+    <meta
+      name="twitter:description"
+      content="Secure client-side storage with encryption, compression, expiry, and integrity checks for modern web apps."
+    />
+    <meta name="twitter:creator" content="@abhishekayu" />
+
+    <!-- ================= THEME & PWA ================= -->
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <!-- ================= PERFORMANCE ================= -->
+    <link rel="preconnect" href="https://registry.npmjs.org" />
+    <link rel="dns-prefetch" href="https://github.com" />
+
+    <!-- ================= STRUCTURED DATA (JSON-LD) ================= -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareSourceCode",
+        "name": "secured-storage-web",
+        "description": "A secure JavaScript storage library providing encrypted localStorage, sessionStorage, cookies, and IndexedDB with AES encryption, compression, expiry, hashing, and events.",
+        "programmingLanguage": "JavaScript",
+        "author": {
+          "@type": "Person",
+          "name": "Abhishek Verma",
+          "url": "https://github.com/abhishekayu"
+        },
+        "license": "https://opensource.org/licenses/MIT",
+        "codeRepository": "https://github.com/abhishekayu",
+        "downloadUrl": "https://www.npmjs.com/package/secured-storage-web",
+        "keywords": [
+          "encrypted storage",
+          "localStorage encryption",
+          "sessionStorage encryption",
+          "secure cookies",
+          "indexedDB encryption",
+          "AES encryption",
+          "web security"
+        ]
+      }
+    </script>
   </head>
+
   <body>
+    <noscript>
+      secured-storage-web requires JavaScript to run. Please enable JavaScript.
+    </noscript>
+
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
